<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Merchant Account</string>
    <string name="action_settings">Settings</string>
    <string name="source_and_class_name">MAS</string>
    <string name="lbl_create_lead_img">Create Lead Button</string>
    <string name="lbl_action_get_paid">Get Paid</string>
    <string name="lbl_action_receipt">Receipt</string>
    <string name="lbl_action_activate">Activate</string>
    <string name="lbl_action_pricing">Pricing</string>
    <string name="lbl_new_sale">New Sale\n</string>
    <string name="lbl_touch_here">\nTouch Here</string>
    <string name="lbl_enter_amount">Enter Amount</string>
    <string name="lbl_total">Total:</string>
    <string name="lbl_hint_amt">0.00</string>
    <string name="lbl_total_amt">$0.00</string>
    <string name="lbl_ok">OK</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_next">Next</string>
    <string name="lbl_manual_entry">Manual Entry</string>
    <string name="lbl_review">Review</string>
    <string name="lbl_cc_no">Credit Card Number</string>
    <string name="lbl_cc_exp">Exp. Date</string>
    <string name="lbl_cc_st_add">Street Address <font size="18">(Optional)</font></string>
    <string name="lbl_cc_cvv2">CVV</string>
    <string name="lbl_cc_zip">Zip Code</string>
    <string name="lbl_cc_sales_tax">Sales Tax:</string>
    <string name="lbl_cc_tot_amt">Total Amount:</string>
    <string name="lbl_signature">Signature</string>
    <string name="lbl_add_tip">Add Tip</string>
    <string name="lbl_tip_amount">Tip Amount</string>
    <string name="lbl_clear">Clear X</string>
    <string name="lbl_demo_cust_name">Dave Smith</string>
    <string name="lbl_charged_amount">Charged Amount:</string>
    <string name="lbl_zero_per">0%</string>
    <string name="lbl_100_per">100%</string>
    <string name="lbl_sel_per">0%</string>
    <string name="lbl_sign_here">Sign Here</string>
    <string name="lbl_charge_now">Charge Now</string>
    <string name="lbl_charge_success">Charge Successful</string>
    <string name="lbl_tip_5">5%</string>
    <string name="lbl_tip_10">10%</string>
    <string name="lbl_tip_15">15%</string>
    <string name="lbl_tip_20">20%</string>
    <string name="lbl_tip_25">25%</string>
    <string name="lbl_tip_30">30%</string>
    <string name="lbl_tip_cancel">Cancel</string>
    <string name="lbl_tip_confirm">Confirm</string>
    <string name="lbl_email_reciept">Email Receipt</string>
    <string name="lbl_text_reciept">Text Receipt</string>
    <string name="lbl_skip">Skip</string>
    <string name="lbl_success_msg_header">Welcome to\nCredit Card Reader</string>
    <string name="lbl_success_msg_content">Now that you know how easy it is to get paid, the next step is to activate your Credit Card Processing account and receive:\n\n-Free Card Reader\n-Next Day Funding\n-Rates starting at 0.25%</string>
    <string name="lbl_demo">Demo</string>
    <string name="lbl_activate_account">Activate Account</string>
    <string name="lbl_continue_demo">Continue Demo</string>
    <string name="lbl_apply_now">Apply Now</string>
    <string name="lbl_apply_phone">Apply via Phone</string>
    <string name="lbl_sign_in">Sign In</string>
    <string name="lbl_sign_up">Sign Up</string>
    <string name="lbl_pricing">Pricing</string>
    <string name="lbl_call_us">Call Us</string>
    <string name="lbl_login_msg_1">If you need help logging in,</string>
    <string name="lbl_login_msg_2">Please call&#160;<a href="tel:18003353303">1 (800) 335-3303</a></string>
    <string name="lbl_login">Login</string>
    <string name="lbl_account_login">Account Login</string>
    <string name="lbl_create_login">Create Login</string>
    <string name="lbl_username">Username</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_new_account">New Account</string>
    <string name="lbl_sign_up_msg">Create Profile and Login</string>
    <string name="lbl_sign_up_name">First Name</string>
    <string name="lbl_sign_up_last_name">Last Name</string>
    <string name="lbl_sign_up_buss_name">Business Name</string>
    <string name="lbl_sign_up_email">Email</string>
    <string name="lbl_sign_up_phone">Phone Number</string>
    <string name="lbl_sign_up_password">Create Password</string>
    <string name="lbl_sign_up_v_password">Retype Password</string>
    <string name="lbl_sign_up_save">Save</string>
    <string name="lbl_business_info">Business Info</string>
    <string name="lbl_buss_info_st_add">Street Address</string>
    <string name="lbl_buss_info_city">City</string>
    <string name="lbl_buss_info_state">State</string>
    <string name="lbl_buss_info_zip">Zip Code</string>
    <string name="lbl_buss_info_phone">Phone Number</string>
    <string name="lbl_buss_info_details">Products &amp; Services Sold:\n<font size='16'>(ie. Boutique Clothing, Stationary, etc.)</font></string>
    <string name="lbl_buss_info_fed_q">Do you have a Fed. Tax ID?</string>
    <string name="lbl_buss_info_fed_yn">Yes/No?</string>
    <string name="lbl_buss_info_own_type">Ownership Type</string>
    <string name="lbl_principal_info">Principal Info</string>
    <string name="lbl_princ_info_st_add">Street Address</string>
    <string name="lbl_princ_info_city">City</string>
    <string name="lbl_princ_info_state">State</string>
    <string name="lbl_princ_info_zip">Zip Code</string>
    <string name="lbl_princ_info_dob">DOB</string>
    <string name="lbl_princ_info_ssn">SSN</string>
    <string name="lbl_princ_info_check">Uncheck if home address is\ndifferent from the business.</string>
    <string name="lbl_princ_info_detail">We require birth date and SSN to validate and protect your identity. SmartSwipe follows industry-recognized security safeguards to protect your personal data from misuse.</string>
    <string name="lbl_account_info">Account Info</string>
    <string name="lbl_account_info_check">Do you sell to Customers In Person?</string>
    <string name="lbl_average_sales">Average Sales Per Customer:</string>
    <string name="lbl_estimated_cc_sales">Estimated Mo. Credit Sales:</string>
    <string name="lbl_deposit_fund_add">Where should we deposit your funds? </string>
    <string name="lbl_bank_name">Bank Name</string>
    <string name="lbl_bank_routing_no">Bank Routing Number</string>
    <string name="lbl_bank_acc_no">Bank Accounting Number</string>
    <string name="lbl_key">Keys</string>
    <string name="lbl_key_0">0</string>
    <string name="lbl_key_01"></string>
    <string name="lbl_key_02"></string>
    <string name="lbl_key_03"></string>
    <string name="lbl_key_04"></string>
    <string name="lbl_key_05"></string>
    <string name="lbl_key_06"></string>
    <string name="lbl_key_07"></string>
    <string name="lbl_key_08"></string>
    <string name="lbl_key_09"></string>
    <string name="lbl_key_00"></string>
    <string name="lbl_key_x"></string>
    <string name="lbl_thankyou">Thank You</string>
    <string name="lbl_thankyou_msg">One of our representatives will contact you shortly.</string>
    <string name="lbl_receipt_header">This information will be displayed on your email &amp; text receipts.</string>
    <string name="lbl_receipt_bus_name">Business Name</string>
    <string name="lbl_receipt_name">Owner\'s Name <font size='12'>(Will Not Be Displayed)</font></string>
    <string name="lbl_receipt_address">Steeet Address</string>
    <string name="lbl_receipt_city">City</string>
    <string name="lbl_receipt_state">State</string>
    <string name="lbl_receipt_zip">Zip Code</string>
    <string name="lbl_receipt_phone">Phone</string>
    <string name="lbl_receipt_email">Email</string>
    <string name="lbl_receipt_save">Save</string>
    <string name="lbl_receipt_cancel">Cancel</string>
    <string name="lbl_pricing_header">Accept Credit Cards\nOn The Go!</string>
    <string name="lbl_sale_amount">Enter the Amount</string>
    <string name="lbl_pricing_row_1_key">Monthly Service</string>
    <string name="lbl_pricing_row_1_val">$7.95</string>
    <string name="lbl_pricing_row_2_key">Debit Rate</string>
    <string name="lbl_pricing_row_2_val">$0.25%</string>
    <string name="lbl_pricing_row_3_key">Transaction Fee</string>
    <string name="lbl_pricing_row_3_val">$0.19</string>
    <string name="lbl_pricing_row_4_key">Set Up Fee</string>
    <string name="lbl_pricing_row_4_val">NONE</string>
    <string name="lbl_pricing_row_5_key">Card Reader</string>
    <string name="lbl_pricing_row_5_val">FREE</string>
    <string name="lbl_pricing_row_6_key">Additional Users</string>
    <string name="lbl_pricing_row_6_val">FREE</string>
    <string name="lbl_pricing_apply">Apply Now</string>
    <string name="progress_bar">Progress Indicator</string>
    <string name="lbl_ownership_type">Ownership Type</string>
    <string name="lbl_own_type_1">Sole-Proprietor</string>
    <string name="lbl_own_type_2">LLC</string>
    <string name="lbl_own_type_3">Corporation</string>
    <string name="lbl_own_type_4">Non-Profit</string>
    <string name="lbl_done">Done</string>
    <string name="lbl_confirmation">Confirmation</string>
    <string name="lbl_confirm_done">You\'re Done!</string>
    <string name="lbl_confirm_done_msg">Application has been submitted.\nPlease allow 1&#8211;3 business days for approval</string>
    <string name="lbl_confirm_done_footer">If you do not receive an email\nplease call <u><a href="tel:18003353303">1 (800) 335-3303</a></u></string>
    <string name="lbl_i_agree">I agree to the</string>
    <string name="lbl_terms_cond">Terms &amp; Conditions</string>
    <string name="lbl_terms_cond_desc">This Agreement sets forth the terms and conditions that govern your use of iEntity website and the services provided.</string>
    <string name="lbl_verification">Verification</string>
    <string name="lbl_verification_msg">A verification code was just sent to the phone number associated with your account. Please enter the code below.</string>
    <string name="lbl_verify">Verify</string>
    <string name="lbl_verification_footer_1">Didn\'t receive the text message?</string>
    <string name="lbl_verification_footer_2"><u>Verify or change phone number</u></string>
    <string name="lbl_verification_footer_3">For further assistance, contact us here:</string>
    <string name="lbl_verification_footer_4"><u><a href="tel:18003353303">1 (800) 335-3303</a></u></string>
    <string name="lbl_verification_footer_5"><u><a href="mailto:support@cjtechapps.com">support@cjtechapps.com</a></u></string>
    <string name="lbl_or">OR</string>
    <string name="lbl_thank_you">Thank you</string>
    <string name="lbl_thank_you_msg">Your Application has been submitted. A representative will follow up with you to complete the process.</string>
    <string name="lbl_thank_you_footer"><u><a href="tel:18003353303">Call now for a quicker setup.</a></u></string>
    <string name="lbl_call_now">Call Now for Quick Setup:</string>
    <string name="lbl_quick_setup">Quick Setup:&#160;<u><a href="tel:18003353303">1 (800) 335-3303</a></u></string>
    <string name="string_buisness_info">Business Info</string>
    <string name="string_do_you_have_a_federal_tax_id">Do you Have a Federal Tax ID?</string>
    <string name="string_next">Next</string>
    <string name="string_business_type">Business Type</string>
    <string name="string_yes_no">Yes/No</string>
    <string name="string_product_and_services_sold_ie_boutique_clothing_stationary_etc">Product and Services Sold:(ie.Boutique clothing Stationary etc)</string>
    <string name="string_hint_phone_number">Phone Number</string>
    <string name="string_zip_code">Zip Code</string>
    <string name="string_city">City</string>
    <string name="string_street_name">Street Name</string>
    <string name="string_business_name">Business Name</string>
    <string name="string_federal_tax_id">Federal Tax ID</string>
    <string name="string_state">State</string>
</resources>