<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#ff2280c3"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:padding="@dimen/activity_horizontal_margin"
            android:shrinkColumns="*"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/action_cancel"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="left"
                    android:drawableLeft="@drawable/ic_arrow_back_white_24dp"
                    android:drawableRight="@drawable/spacer" />

                <TextView
                    android:id="@+id/action_title"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/lbl_confirmation"
                    android:textColor="#ffffffff"
                    android:textSize="24.0sp" />

                <TextView
                    android:id="@+id/action_next"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="right"
                    android:drawableLeft="@drawable/spacer"
                    android:drawableRight="@drawable/lbl_go_m" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#ffe2e2e2"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin">

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="0.0dip"
                android:layout_weight="1.0"
                android:contentDescription="@string/lbl_charge_success"
                android:scaleType="fitCenter"
                android:src="@drawable/success" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingTop="@dimen/activity_horizontal_margin"
                android:text="@string/lbl_charge_success"
                android:textColor="#ff4d4d4d"
                android:textSize="24.0sp" />

            <TextView
                android:id="@+id/cust_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingTop="@dimen/activity_horizontal_margin"
                android:text="@string/lbl_demo_cust_name"
                android:textColor="#ff4d4d4d"
                android:textSize="22.0sp" />

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:shrinkColumns="*"
                android:stretchColumns="*">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|right"
                        android:gravity="center|right"
                        android:text="@string/lbl_charged_amount"
                        android:textColor="#ff4d4d4d"
                        android:textSize="22.0sp" />

                    <TextView
                        android:id="@+id/total_sale_amt"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_gravity="center|left"
                        android:gravity="center|left"
                        android:paddingLeft="5.0dip"
                        android:text="@string/lbl_total_amt"
                        android:textColor="#ff4d4d4d"
                        android:textSize="24.0sp"
                        android:textStyle="bold" />
                </TableRow>
            </TableLayout>

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_horizontal_margin"
                android:shrinkColumns="*"
                android:stretchColumns="0">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin">

                    <EditText
                        android:id="@+id/cust_phone"
                        android:layout_width="fill_parent"
                        android:layout_height="55.0dip"
                        android:background="@drawable/edit_text_bg"
                        android:drawablePadding="10dp"
                        android:drawableLeft="@drawable/icon_phone"
                        android:gravity="center_vertical"
                        android:maxLength="12"
                        android:inputType="phone"
                        android:singleLine="true"
                        android:textColor="#ff4d4d4d"
                        android:textSize="24.0sp" />

<!--                    <TextView-->
<!--                        android:id="@+id/cust_phone_cut"-->
<!--                        android:layout_width="31.0dip"-->
<!--                        android:layout_height="31.0dip"-->
<!--                        android:layout_marginLeft="-5.0dip"-->
<!--                        android:layout_marginRight="5.0dip"-->
<!--                        android:layout_marginTop="4.0dip"-->
<!--                        android:background="@drawable/icon_cut"-->
<!--                        android:gravity="bottom|center" />-->
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/cust_email"
                        android:layout_width="fill_parent"
                        android:layout_height="55.0dip"
                        android:drawablePadding="10dp"
                        android:background="@drawable/edit_text_bg"
                        android:drawableLeft="@drawable/icon_mail"
                        android:imeOptions="actionDone"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:textColor="#ff4d4d4d"
                        android:textSize="24.0sp" />

<!--                    <TextView-->
<!--                        android:id="@+id/cust_email_cut"-->
<!--                        android:layout_width="31.0dip"-->
<!--                        android:layout_height="31.0dip"-->
<!--                        android:layout_marginLeft="-5.0dip"-->
<!--                        android:layout_marginRight="5.0dip"-->
<!--                        android:layout_marginTop="4.0dip"-->
<!--                        android:background="@drawable/icon_cut"-->
<!--                        android:gravity="bottom|center" />-->
                </TableRow>
            </TableLayout>

            <Button
                android:visibility="gone"
                android:id="@+id/pricing_apply"
                android:layout_width="fill_parent"
                android:layout_height="65.0dip"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:background="@drawable/btn_bg"
                android:gravity="center"
                android:text="@string/lbl_pricing_apply"
                android:textColor="#ffffffff"
                android:textSize="30.0sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/success_popup"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/popup_bg"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:background="@drawable/popup_bg"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/lbl_success_msg_header"
                android:textColor="#ffffffff"
                android:textSize="26.0sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:paddingBottom="@dimen/content_horizontal_margin"
                android:paddingTop="@dimen/content_horizontal_margin"
                android:text="@string/lbl_success_msg_content"
                android:textColor="#ffffffff"
                android:textSize="24.0sp" />

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:shrinkColumns="*"
                android:stretchColumns="*">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/apply"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/activity_horizontal_margin_s"
                        android:background="@drawable/btn_bg"
                        android:text="@string/lbl_apply_now"
                        android:textColor="#ffffffff"
                        android:textSize="16.0sp" />

                    <Button
                        android:id="@+id/apply_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin_s"
                        android:background="@drawable/btn_bg"
                        android:text="@string/lbl_apply_phone"
                        android:textColor="#ffffffff"
                        android:textSize="16.0sp" />
                </TableRow>
            </TableLayout>

            <Button
                android:id="@+id/skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:background="@drawable/btn_bg"
                android:text="@string/lbl_continue_demo"
                android:textColor="#ffffffff"
                android:textSize="16.0sp" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>